--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='https://www.finaldestination.com/'" />
+    <meta http-equiv="refresh" content="0; URL='https://www.udemy.com/course/java-best-practices-performance-quality-secure-code'" />
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://www.finaldestination.com/">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://www.udemy.com/course/java-best-practices-performance-quality-secure-code">click here</a>.</p>
 </body>
 </html>
