added all conversion tracking code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; URL='https://www.udemy.com/course/java-best-practices-performance-quality-secure-code/?couponCode=3B447A1D3855FA9DC852'" />
     <title>Redirecting...</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10847207624"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'AW-10847207624');
+    </script>
 </head>
 <body>
     <p>If you are not redirected automatically, <a href="https://www.udemy.com/course/java-best-practices-performance-quality-secure-code/?couponCode=3B447A1D3855FA9DC852">click here</a>.</p>
