--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
         gtag('js', new Date());
         gtag('config', 'AW-10847207624');
     </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-361FCTE6SB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-361FCTE6SB');
+</script>
+
 </head>
 <body>
     <p>If you are not redirected automatically, <a href="https://www.udemy.com/course/java-best-practices-performance-quality-secure-code/?couponCode=3B447A1D3855FA9DC852">click here</a>.</p>
